tests/protocol_v3/snapshots/protocol_v3__redirects__external_location_conflict.snap
---
source: tests/protocol_v3/redirects.rs
expression: location
---
{
  "status": 409,
  "headers": {
    "vary": [
      "X-Inertia"
    ],
    "x-inertia-location": [
      "https://example.com/outside"
    ]
  },
  "body": {
    "type": "empty"
  }
}
