tests/protocol_v3/snapshots/protocol_v3__redirects__fragment_location_conflict.snap
---
source: tests/protocol_v3/redirects.rs
expression: fragment
---
{
  "status": 409,
  "headers": {
    "vary": [
      "X-Inertia"
    ],
    "x-inertia-redirect": [
      "https://example.com/outside#details"
    ]
  },
  "body": {
    "type": "empty"
  }
}
