tests/protocol_v3/snapshots/protocol_v3__redirects__invalid_uri_invalid-redirect.snap
---
source: tests/protocol_v3/redirects.rs
expression: response
---
{
  "status": 500,
  "headers": {
    "content-type": [
      "text/plain; charset=utf-8"
    ]
  },
  "body": {
    "type": "text",
    "value": "failed to build Inertia response"
  }
}
