tests/protocol_v3/snapshots/protocol_v3__redirects__relative_redirect.snap
---
source: tests/protocol_v3/redirects.rs
expression: relative
---
{
  "status": 302,
  "headers": {
    "location": [
      "?next=target#fragment"
    ],
    "vary": [
      "X-Inertia"
    ]
  },
  "body": {
    "type": "empty"
  }
}
